🔒 Add email verification process.

--- a/src/main/resources/templates/student-login.html
+++ b/src/main/resources/templates/student-login.html
@@ -26,5 +26,7 @@
         </div>
     </form>
     <a href="/student-signup">Don't have an account? Sign up</a>
+    <br>
+    <a href="/resend-verification">Didn't receive verification email? Request new one</a>
 </body>
 </html>
