--- a/src/main/resources/templates/student-signup.html
+++ b/src/main/resources/templates/student-signup.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Student Signup</h1>
+    <p>Please provide your information to create an account. After signing up, check your email for a verification link.</p>
     <form th:action="@{/student-signup}" th:object="${student}" method="post">
         <div>
             <label for="name">Full Name</label>
