--- a/src/main/resources/templates/student-login.html
+++ b/src/main/resources/templates/student-login.html
@@ -9,6 +9,9 @@
     <div th:if="${param.error}">
         Invalid email or password.
     </div>
+    <div th:if="${param.locked}">
+        Your email is not verified. Please check your email for verification instructions.
+    </div>
     <div th:if="${param.logout}">
         You have been logged out.
     </div>
