🔒 Add password reset functionality with rate limiting and token cleanup.

--- a/src/main/resources/templates/student-login.html
+++ b/src/main/resources/templates/student-login.html
@@ -31,5 +31,7 @@
     <a href="/student-signup">Don't have an account? Sign up</a>
     <br>
     <a href="/resend-verification">Didn't receive verification email? Request new one</a>
+    <br>
+    <a href="/forgot-password">Forgot password?</a>
 </body>
 </html>
