--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -17,9 +17,9 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
         <i class="bi bi-calendar2-plus-fill"></i>
         <span>Schedule</span>
     </a>
-    <a href="/track">
+    <a href="/dashboard">
         <i class="bi bi-clipboard2-data-fill"></i>
-        <span>Track</span>
+        <span>Dashboard</span>
     </a>
     <a href="/about">
         <i class="bi bi-info-circle-fill"></i>
