--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -19,7 +19,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
     </a>
     <a href="/dashboard">
         <i class="bi bi-clipboard2-data-fill"></i>
-        <span>Dashboard</span>
+        <span>Dash</span>
     </a>
     <a href="/about">
         <i class="bi bi-info-circle-fill"></i>
