--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,8 +38,8 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                          <div class="icon-wrapper bg-warning-soft">
                             <i class="bi bi-clipboard2-data-fill"></i>
                         </div>
-                        <h3>My Dashboard</h3>
-                        <p>View your reports and appointments.</p>
+                        <h3>Check my Dash</h3>
+                        <p>View and track your submitted reports and appointments.</p>
                     </a>
                     <a href="/about" class="bento-card">
                          <div class="icon-wrapper bg-info-soft">
