--- a/src/main/resources/templates/fragments/status-help-modal.html
+++ b/src/main/resources/templates/fragments/status-help-modal.html
@@ -19,19 +19,19 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/.
                     <div class="card-body">
                         <div class="row">
                             <div class="col-6 d-flex align-items-center mb-2">
-                                <div class="status-pill me-2" style="background-color: #ffc107;"></div>
+                                <div class="status-pill me-2" style="background-color: #FFE5B4;"></div>
                                 <span>Pending Review</span>
                             </div>
                             <div class="col-6 d-flex align-items-center mb-2">
-                                <div class="status-pill me-2" style="background-color: #0dcaf0;"></div>
-                                <span>Under Investigation</span>
+                                <div class="status-pill me-2" style="background-color: #B6D7FF;"></div>
+                                <span>Under Review</span>
                             </div>
                             <div class="col-6 d-flex align-items-center mb-2">
-                                <div class="status-pill me-2" style="background-color: #198754;"></div>
+                                <div class="status-pill me-2" style="background-color: #C5EAC5;"></div>
                                 <span>Resolved</span>
                             </div>
                             <div class="col-6 d-flex align-items-center mb-2">
-                                <div class="status-pill me-2" style="background-color: #dc3545;"></div>
+                                <div class="status-pill me-2" style="background-color: #FFC0CB;"></div>
                                 <span>Rejected</span>
                             </div>
                         </div>
@@ -44,19 +44,19 @@ file, You can obtain one at https://mozilla.org/MPL/2.0/.
                     <div class="card-body">
                         <div class="row">
                             <div class="col-6 d-flex align-items-center mb-2">
-                                <div class="status-pill me-2" style="background-color: #ffc107;"></div>
+                                <div class="status-pill me-2" style="background-color: #FFE5B4;"></div>
                                 <span>Pending</span>
                             </div>
                             <div class="col-6 d-flex align-items-center mb-2">
-                                <div class="status-pill me-2" style="background-color: #198754;"></div>
+                                <div class="status-pill me-2" style="background-color: #B6D7FF;"></div>
                                 <span>Confirmed</span>
                             </div>
                             <div class="col-6 d-flex align-items-center mb-2">
-                                <div class="status-pill me-2" style="background-color: #0dcaf0;"></div>
+                                <div class="status-pill me-2" style="background-color: #C5EAC5;"></div>
                                 <span>Completed</span>
                             </div>
                             <div class="col-6 d-flex align-items-center mb-2">
-                                <div class="status-pill me-2" style="background-color: #dc3545;"></div>
+                                <div class="status-pill me-2" style="background-color: #FFC0CB;"></div>
                                 <span>Cancelled</span>
                             </div>
                         </div>
