🎨 Refactor page specific stylesheets.

--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -7,7 +7,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{fragments/admin-common :: head('Admin Dashboard')}"></head>
+<head th:replace="~{fragments/admin-common :: head(title='Admin Dashboard')}"></head>
 
 <body class="admin-body">
     <div th:replace="~{fragments/admin-common :: admin-nav}"></div>
