--- a/src/main/resources/templates/admin-reports.html
+++ b/src/main/resources/templates/admin-reports.html
@@ -6,7 +6,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/admin-common :: head('Admin Dashboard - Reports')}"></head>
+<head th:replace="~{fragments/admin-common :: head(title='Manage Reports')}"></head>
 <body class="admin-body">
     <div th:replace="~{fragments/admin-common :: admin-nav}"></div>
     <div class="container py-4 py-md-5" style="max-width: 1200px;">
