--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -6,7 +6,11 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/common :: head('My Dash - SafePoint')}"></head>
+<head th:replace="~{fragments/common :: head(title='Student Dashboard')}"></head>
+<head>
+    <link rel="stylesheet" href="/css/dashboard.css">
+    <link rel="stylesheet" href="/css/status.css">
+</head>
 <body>
     <div th:replace="~{fragments/nav :: nav}"></div>
     <div class="main-content">
