--- a/src/main/resources/templates/report-detail.html
+++ b/src/main/resources/templates/report-detail.html
@@ -6,7 +6,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/admin-common :: head('Report Details')}"></head>
+<head th:replace="~{fragments/common :: head(title='Report Details')}"></head>
 <body class="admin-body">
 
 <div th:replace="~{fragments/admin-common :: admin-nav}"></div>
