--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -6,7 +6,10 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/common :: head('SafePoint - Schedule a Session')}"></head>
+<head th:replace="~{fragments/common :: head(title='Schedule an Appointment')}"></head>
+<head>
+    <link rel="stylesheet" href="/css/multi-step-form.css">
+</head>
 <body>
     <div th:replace="~{fragments/nav :: nav}"></div>
     <div class="main-content">
