--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -10,33 +10,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 <body>
     <div th:replace="~{fragments/nav :: nav}"></div>
     <div class="main-content">
-        <div class="container content-container">
-            <div class="content-card">
-                <div class="text-center">
-                    <h1 class="fw-bold">About SafePoint</h1>
-                    <p class="text-muted mb-4">Know more about the project and its mission.</p>
-
-                    <p class="text-muted mt-4 mb-4">
-                        SafePoint is a simple platform designed to help students report incidents of bullying and seek support. Our mission is to create a safer school environment for everyone.
-                    </p>
-                    <div class="mt-4">
-                        <p class="text-muted">
-                            This project is open source and licensed under the Mozilla Public License 2.0 and Creative Commons BY-NC-SA 4.0.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-card mt-4">
-                <div class="card-body">
-                    <h5 class="card-title fw-bold mb-3">How can we do better?</h5>
-                    <p class="card-text">Your feedback helps us improve SafePoint and create a safer, more supportive environment for all students. We value your thoughts and suggestions.</p>
-                    <a href="https://forms.gle/KCjcypnSS3TsmerM9" class="btn btn-primary" target="_blank" rel="noopener noreferrer">
-                        Take the survey
-                    </a>
-                </div>
-            </div>
-        </div>
+        <div th:replace="~{fragments/about-content :: about-content}"></div>
     </div>
 
     <div th:replace="~{fragments/common :: scripts}"></div>
